[package]
name = "wasabi"
version = "0.1.0"
edition = "2021"

[dependencies]
ctrlc = "3.4"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_System_Threading",
    "Win32_Security",
    "implement",
]

[dependencies.windows-core]
version = "0.58"

[profile.release]
opt-level = 3
lto = true
strip = true
